prometheus/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: kmonit.moip.com.br
    http:
      paths:
      - path: "/prometheus"
        pathType: Prefix
        backend:
          service:
            name: prometheus-service
            port:
              number: 30000
